<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="yuval.practice.moview.MovieDetailActivityFragment"
    android:weightSum="2"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/detail_title_text"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView android:text="@string/release_date" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/detail_release_date_text"
            android:layout_below="@id/detail_title_text"/>

        <TextView android:text="@string/rating" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/detail_rating_text"
            android:layout_below="@id/detail_release_date_text"/>

        <TextView android:text="@string/synopsis" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/detail_main_text"
            android:layout_below="@id/detail_rating_text"/>
    </RelativeLayout>

    <ImageView
        android:contentDescription="@string/content_poster_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/detail_poster_image"
        android:layout_weight="1" />

</LinearLayout>
